# YURIformer

./: .gitignore  README.md  pyproject.toml
DEQ_kernel/: deq_solver.py  posit.py
architecture_kernels/: eml_kernel.py  test_triton.py
examples/: deq_dropin_replace_bptt.py  main-arch.py  run_benchmarks.py  run_depth_benchmarks.py
learning_rules/: __init__.py
learning_rules/DEQ_kernels/: __init__.py  accelerators.py  anderson.py  broyden.py  config.py  deq_solver.py  hybrid.py  implicit_diff.py  pjwr.py  regularization.py  triton_kernels.py
learning_rules/neuromorphic_kernels/: __init__.py
learning_rules/neuromorphic_kernels/OSTL/: __init__.py  ostl_function.py  ostl_numba.py  ostl_triton.py
learning_rules/neuromorphic_kernels/OSTTP/: __init__.py  osttp_function.py  osttp_numba.py  osttp_triton.py
