[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "YURIformer"
version = "0.1.0"
description = "A vibe-coded, hierarchical dendritic computing framework."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "moelanoby" }
]
dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["architecture_kernels*", "learning_rules*", "numeric_kernels*"]
